[gd_scene load_steps=4 format=3 uid="uid://cirwe1revw8wm"]

[ext_resource type="Script" path="res://pipes/pipes.gd" id="1_poru5"]
[ext_resource type="PackedScene" uid="uid://dko3dna43phfl" path="res://laser/laser.tscn" id="1_utbit"]
[ext_resource type="PackedScene" uid="uid://tduo8nubm74v" path="res://pipe/pipe.tscn" id="2_4ufiu"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_poru5")

[node name="Laser" parent="." instance=ExtResource("1_utbit")]

[node name="Upper" parent="." instance=ExtResource("2_4ufiu")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_4ufiu")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(140, 2)

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
